# packaging-core-libs

./: .gitignore  CMakeLists.txt  README.md
1_library_update/: CMakeLists.txt  Makefile  README.md  main.cpp
1_library_update/lib-v1/: CMakeLists.txt
1_library_update/lib-v1/include/: calculator.h
1_library_update/lib-v1/src/: calculator.cpp
1_library_update/lib-v2/: CMakeLists.txt
1_library_update/lib-v2/include/: calculator.h
1_library_update/lib-v2/src/: calculator.cpp
1_library_update/lib-v3/: CMakeLists.txt
1_library_update/lib-v3/include/: calculator.h
1_library_update/lib-v3/src/: calculator.cpp
1_library_update/lib_v2/: CMakeLists.txt
1_library_update/lib_v3/: CMakeLists.txt
2_cuda_error/: CMakeLists.txt
lib_v1/: CMakeLists.txt
lib_v3/include/: calculator.h
lib_v3/src/: calculator.cpp
